--- a/MOJ-Climate-Change-and-Crime/get_data.ipynb
+++ b/MOJ-Climate-Change-and-Crime/get_data.ipynb
@@ -437,19 +437,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "02d395d8-39b1-4906-b8d3-0c81625dcaeb",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.concat([pd.melt(df_recent, id_vars=['MajorText', 'MinorText', 'LookUp_BoroughName'], var_name='yearmonth'),\n",
     "              pd.melt(df_hist, id_vars=['MajorText', 'MinorText', 'LookUp_BoroughName'], var_name='yearmonth')],\n",
-    "              axis=0, ignore_index=True).sort_values(by=['yearmonth', 'LookUp_BoroughName', 'MajorText', 'MinorText']).reset_index()"
+    "              axis=0, ignore_index=True).sort_values(by=['yearmonth', 'LookUp_BoroughName', 'MajorText', 'MinorText']).reset_index()\n",
+    "df = df.rename(columns={'LookUp_BoroughName': 'borough'}).drop('index',axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "1d9da231-3623-43f7-b594-a39483de1458",
    "metadata": {},
    "outputs": [
@@ -474,10 +475,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>MajorText</th>\n",
        "      <th>MinorText</th>\n",
-       "      <th>LookUp_BoroughName</th>\n",
+       "      <th>borough</th>\n",
        "      <th>yearmonth</th>\n",
        "      <th>value</th>\n",
        "    </tr>\n",
@@ -485,7 +485,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>37128</td>\n",
        "      <td>Arson and Criminal Damage</td>\n",
        "      <td>Arson</td>\n",
        "      <td>Barking and Dagenham</td>\n",
@@ -494,7 +493,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>37129</td>\n",
        "      <td>Arson and Criminal Damage</td>\n",
        "      <td>Criminal Damage</td>\n",
        "      <td>Barking and Dagenham</td>\n",
@@ -503,7 +501,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>37130</td>\n",
        "      <td>Burglary</td>\n",
        "      <td>Burglary Business and Community</td>\n",
        "      <td>Barking and Dagenham</td>\n",
@@ -512,7 +509,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>37131</td>\n",
        "      <td>Burglary</td>\n",
        "      <td>Domestic Burglary</td>\n",
        "      <td>Barking and Dagenham</td>\n",
@@ -521,7 +517,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>37132</td>\n",
        "      <td>Drug Offences</td>\n",
        "      <td>Drug Trafficking</td>\n",
        "      <td>Barking and Dagenham</td>\n",
@@ -535,11 +530,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243403</th>\n",
-       "      <td>37123</td>\n",
        "      <td>Vehicle Offences</td>\n",
        "      <td>Theft from a Motor Vehicle</td>\n",
        "      <td>Westminster</td>\n",
@@ -548,7 +541,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243404</th>\n",
-       "      <td>37124</td>\n",
        "      <td>Vehicle Offences</td>\n",
        "      <td>Theft or Taking of a Motor Vehicle</td>\n",
        "      <td>Westminster</td>\n",
@@ -557,7 +549,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243405</th>\n",
-       "      <td>37125</td>\n",
        "      <td>Violence Against the Person</td>\n",
        "      <td>Homicide</td>\n",
        "      <td>Westminster</td>\n",
@@ -566,7 +557,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243406</th>\n",
-       "      <td>37126</td>\n",
        "      <td>Violence Against the Person</td>\n",
        "      <td>Violence with Injury</td>\n",
        "      <td>Westminster</td>\n",
@@ -575,7 +565,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243407</th>\n",
-       "      <td>37127</td>\n",
        "      <td>Violence Against the Person</td>\n",
        "      <td>Violence without Injury</td>\n",
        "      <td>Westminster</td>\n",
@@ -584,53 +573,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>243408 rows × 6 columns</p>\n",
+       "<p>243408 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        index                    MajorText  \\\n",
-       "0       37128    Arson and Criminal Damage   \n",
-       "1       37129    Arson and Criminal Damage   \n",
-       "2       37130                     Burglary   \n",
-       "3       37131                     Burglary   \n",
-       "4       37132                Drug Offences   \n",
-       "...       ...                          ...   \n",
-       "243403  37123             Vehicle Offences   \n",
-       "243404  37124             Vehicle Offences   \n",
-       "243405  37125  Violence Against the Person   \n",
-       "243406  37126  Violence Against the Person   \n",
-       "243407  37127  Violence Against the Person   \n",
+       "                          MajorText                           MinorText  \\\n",
+       "0         Arson and Criminal Damage                               Arson   \n",
+       "1         Arson and Criminal Damage                     Criminal Damage   \n",
+       "2                          Burglary     Burglary Business and Community   \n",
+       "3                          Burglary                   Domestic Burglary   \n",
+       "4                     Drug Offences                    Drug Trafficking   \n",
+       "...                             ...                                 ...   \n",
+       "243403             Vehicle Offences          Theft from a Motor Vehicle   \n",
+       "243404             Vehicle Offences  Theft or Taking of a Motor Vehicle   \n",
+       "243405  Violence Against the Person                            Homicide   \n",
+       "243406  Violence Against the Person                Violence with Injury   \n",
+       "243407  Violence Against the Person             Violence without Injury   \n",
        "\n",
-       "                                 MinorText    LookUp_BoroughName yearmonth  \\\n",
-       "0                                    Arson  Barking and Dagenham    201004   \n",
-       "1                          Criminal Damage  Barking and Dagenham    201004   \n",
-       "2          Burglary Business and Community  Barking and Dagenham    201004   \n",
-       "3                        Domestic Burglary  Barking and Dagenham    201004   \n",
-       "4                         Drug Trafficking  Barking and Dagenham    201004   \n",
-       "...                                    ...                   ...       ...   \n",
-       "243403          Theft from a Motor Vehicle           Westminster    202203   \n",
-       "243404  Theft or Taking of a Motor Vehicle           Westminster    202203   \n",
-       "243405                            Homicide           Westminster    202203   \n",
-       "243406                Violence with Injury           Westminster    202203   \n",
-       "243407             Violence without Injury           Westminster    202203   \n",
+       "                     borough yearmonth  value  \n",
+       "0       Barking and Dagenham    201004      6  \n",
+       "1       Barking and Dagenham    201004    208  \n",
+       "2       Barking and Dagenham    201004     49  \n",
+       "3       Barking and Dagenham    201004    118  \n",
+       "4       Barking and Dagenham    201004      9  \n",
+       "...                      ...       ...    ...  \n",
+       "243403           Westminster    202203    290  \n",
+       "243404           Westminster    202203     51  \n",
+       "243405           Westminster    202203      0  \n",
+       "243406           Westminster    202203    347  \n",
+       "243407           Westminster    202203    659  \n",
        "\n",
-       "        value  \n",
-       "0           6  \n",
-       "1         208  \n",
-       "2          49  \n",
-       "3         118  \n",
-       "4           9  \n",
-       "...       ...  \n",
-       "243403    290  \n",
-       "243404     51  \n",
-       "243405      0  \n",
-       "243406    347  \n",
-       "243407    659  \n",
-       "\n",
-       "[243408 rows x 6 columns]"
+       "[243408 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,18 +617,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "bf2619f4-30fa-48b0-9d0b-701f1ed988af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['date'] = pd.to_datetime(df['yearmonth'], format=\"%Y%m\").dt.date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "aac24299-877c-4151-80fe-1273a98b770f",
    "metadata": {},
    "outputs": [
     {
@@ -676,65 +642,71 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>MajorText</th>\n",
        "      <th>MinorText</th>\n",
-       "      <th>LookUp_BoroughName</th>\n",
+       "      <th>borough</th>\n",
        "      <th>yearmonth</th>\n",
        "      <th>value</th>\n",
        "      <th>date</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>37128</td>\n",
        "      <td>Arson and Criminal Damage</td>\n",
        "      <td>Arson</td>\n",
        "      <td>Barking and Dagenham</td>\n",
        "      <td>201004</td>\n",
        "      <td>6</td>\n",
        "      <td>2010-04-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>37129</td>\n",
        "      <td>Arson and Criminal Damage</td>\n",
        "      <td>Criminal Damage</td>\n",
        "      <td>Barking and Dagenham</td>\n",
        "      <td>201004</td>\n",
        "      <td>208</td>\n",
        "      <td>2010-04-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>37130</td>\n",
        "      <td>Burglary</td>\n",
        "      <td>Burglary Business and Community</td>\n",
        "      <td>Barking and Dagenham</td>\n",
        "      <td>201004</td>\n",
        "      <td>49</td>\n",
        "      <td>2010-04-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>37131</td>\n",
        "      <td>Burglary</td>\n",
        "      <td>Domestic Burglary</td>\n",
        "      <td>Barking and Dagenham</td>\n",
        "      <td>201004</td>\n",
        "      <td>118</td>\n",
        "      <td>2010-04-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>37132</td>\n",
        "      <td>Drug Offences</td>\n",
        "      <td>Drug Trafficking</td>\n",
        "      <td>Barking and Dagenham</td>\n",
        "      <td>201004</td>\n",
        "      <td>9</td>\n",
        "      <td>2010-04-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -745,111 +717,107 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243403</th>\n",
-       "      <td>37123</td>\n",
        "      <td>Vehicle Offences</td>\n",
        "      <td>Theft from a Motor Vehicle</td>\n",
        "      <td>Westminster</td>\n",
        "      <td>202203</td>\n",
        "      <td>290</td>\n",
        "      <td>2022-03-01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243404</th>\n",
-       "      <td>37124</td>\n",
        "      <td>Vehicle Offences</td>\n",
        "      <td>Theft or Taking of a Motor Vehicle</td>\n",
        "      <td>Westminster</td>\n",
        "      <td>202203</td>\n",
        "      <td>51</td>\n",
        "      <td>2022-03-01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243405</th>\n",
-       "      <td>37125</td>\n",
        "      <td>Violence Against the Person</td>\n",
        "      <td>Homicide</td>\n",
        "      <td>Westminster</td>\n",
        "      <td>202203</td>\n",
        "      <td>0</td>\n",
        "      <td>2022-03-01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243406</th>\n",
-       "      <td>37126</td>\n",
        "      <td>Violence Against the Person</td>\n",
        "      <td>Violence with Injury</td>\n",
        "      <td>Westminster</td>\n",
        "      <td>202203</td>\n",
        "      <td>347</td>\n",
        "      <td>2022-03-01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243407</th>\n",
-       "      <td>37127</td>\n",
        "      <td>Violence Against the Person</td>\n",
        "      <td>Violence without Injury</td>\n",
        "      <td>Westminster</td>\n",
        "      <td>202203</td>\n",
        "      <td>659</td>\n",
        "      <td>2022-03-01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>243408 rows × 7 columns</p>\n",
+       "<p>243408 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        index                    MajorText  \\\n",
-       "0       37128    Arson and Criminal Damage   \n",
-       "1       37129    Arson and Criminal Damage   \n",
-       "2       37130                     Burglary   \n",
-       "3       37131                     Burglary   \n",
-       "4       37132                Drug Offences   \n",
-       "...       ...                          ...   \n",
-       "243403  37123             Vehicle Offences   \n",
-       "243404  37124             Vehicle Offences   \n",
-       "243405  37125  Violence Against the Person   \n",
-       "243406  37126  Violence Against the Person   \n",
-       "243407  37127  Violence Against the Person   \n",
+       "                          MajorText                           MinorText  \\\n",
+       "0         Arson and Criminal Damage                               Arson   \n",
+       "1         Arson and Criminal Damage                     Criminal Damage   \n",
+       "2                          Burglary     Burglary Business and Community   \n",
+       "3                          Burglary                   Domestic Burglary   \n",
+       "4                     Drug Offences                    Drug Trafficking   \n",
+       "...                             ...                                 ...   \n",
+       "243403             Vehicle Offences          Theft from a Motor Vehicle   \n",
+       "243404             Vehicle Offences  Theft or Taking of a Motor Vehicle   \n",
+       "243405  Violence Against the Person                            Homicide   \n",
+       "243406  Violence Against the Person                Violence with Injury   \n",
+       "243407  Violence Against the Person             Violence without Injury   \n",
        "\n",
-       "                                 MinorText    LookUp_BoroughName yearmonth  \\\n",
-       "0                                    Arson  Barking and Dagenham    201004   \n",
-       "1                          Criminal Damage  Barking and Dagenham    201004   \n",
-       "2          Burglary Business and Community  Barking and Dagenham    201004   \n",
-       "3                        Domestic Burglary  Barking and Dagenham    201004   \n",
-       "4                         Drug Trafficking  Barking and Dagenham    201004   \n",
-       "...                                    ...                   ...       ...   \n",
-       "243403          Theft from a Motor Vehicle           Westminster    202203   \n",
-       "243404  Theft or Taking of a Motor Vehicle           Westminster    202203   \n",
-       "243405                            Homicide           Westminster    202203   \n",
-       "243406                Violence with Injury           Westminster    202203   \n",
-       "243407             Violence without Injury           Westminster    202203   \n",
+       "                     borough yearmonth  value        date  month  year  \n",
+       "0       Barking and Dagenham    201004      6  2010-04-01      4  2010  \n",
+       "1       Barking and Dagenham    201004    208  2010-04-01      4  2010  \n",
+       "2       Barking and Dagenham    201004     49  2010-04-01      4  2010  \n",
+       "3       Barking and Dagenham    201004    118  2010-04-01      4  2010  \n",
+       "4       Barking and Dagenham    201004      9  2010-04-01      4  2010  \n",
+       "...                      ...       ...    ...         ...    ...   ...  \n",
+       "243403           Westminster    202203    290  2022-03-01      3  2022  \n",
+       "243404           Westminster    202203     51  2022-03-01      3  2022  \n",
+       "243405           Westminster    202203      0  2022-03-01      3  2022  \n",
+       "243406           Westminster    202203    347  2022-03-01      3  2022  \n",
+       "243407           Westminster    202203    659  2022-03-01      3  2022  \n",
        "\n",
-       "        value        date  \n",
-       "0           6  2010-04-01  \n",
-       "1         208  2010-04-01  \n",
-       "2          49  2010-04-01  \n",
-       "3         118  2010-04-01  \n",
-       "4           9  2010-04-01  \n",
-       "...       ...         ...  \n",
-       "243403    290  2022-03-01  \n",
-       "243404     51  2022-03-01  \n",
-       "243405      0  2022-03-01  \n",
-       "243406    347  2022-03-01  \n",
-       "243407    659  2022-03-01  \n",
-       "\n",
-       "[243408 rows x 7 columns]"
+       "[243408 rows x 8 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df['date'] = pd.to_datetime(df['yearmonth'], format=\"%Y%m\").dt.date\n",
+    "df['month'] = pd.DatetimeIndex(df['date']).month\n",
+    "df['year'] = pd.DatetimeIndex(df['date']).year\n",
     "df"
    ]
   },
@@ -1067,12 +1035,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "ca07efcb-15d5-40f9-9029-d36b836e8e67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_pickle('mps.borough.crime.2010-2021.pickle')"
+    "df.to_pickle('mps.borough.crime.2010-2021.pickle')\n",
+    "df.to_csv('mps.borough.crime.2010-2021.csv')"
    ]
   },
   {
